--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-10 d-flex justify-content-center">
-        <%= image_tag("logo.png", class: "logo mb-2", alt: "quizmaster logo") %>
+        <%= image_tag("logo.png", class: "logo mb-1 mt-1", alt: "quizmaster logo") %>
       </div>
     </div>
     <div class="homepage-body">
@@ -16,14 +16,20 @@
       <h2>Check our venues page to find your closest Quiz Dog event.</h2>
     </div>
     <div class="row home-page-buttons">
-      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-quizdog-primary">QUIZZING</h5>
+      <div class="col-md-3 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-quizdog-primary">PUBS</h5>
       </div>
-      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-quizdog-primary">KARAOKE</h5>
+      <div class="col-md-3 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-quizdog-primary">CORPORATE</h5>
       </div>
-      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-quizdog-primary">WHO IS QUIZDOG</h5>
+      <div class="col-md-3 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-quizdog-primary">CHARITY</h5>
+      </div>
+      <div class="col-md-3 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-quizdog-primary">PRIVATE EVENTS</h5>
+      </div>
+      <div class="col-md-3 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-quizdog-primary">VIRTUAL</h5>
       </div>
     </div>
 
@@ -31,76 +37,64 @@
 </div>
 
 
-<div class="row justify-content-evenly bg-success">
+<%# <div class="row justify-content-evenly bg-success">
   <div class="col-3">
     <div class="home-testimonial-card">
       <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
       <%= image_tag("gina.png", class: "avatar") %>
-    </div>
-  </div>
+    <%# </div>
+  </div> %>
 
-  <div class="col-3">
+  <%# <div class="col-3">
      <div class="home-testimonial-card">
       <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
       <%= image_tag("gina.png", class: "avatar") %>
-    </div>
-  </div>
+    <%# </div>
+  </div> %>
 
-   <div class="col-3">
+   <%# <div class="col-3">
      <div class="home-testimonial-card">
       <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
       <%= image_tag("gina.png", class: "avatar") %>
-    </div>
-  </div>
-</div>
-
-<%# <div class="container">
-  <div class="row">
-    <div class="col-4 card-group-image">
-      <%= image_tag("banner1.png") %>
-      <%# <div class="card-body">
-        <%= link_to "#", class: 'profile-card-link' do %>
-          <%# <h5>Pub Quizzes</h5>
-          <p>We do tons of them</p> %>
-        <%# <% end %>
-      <%# </div>
+    <%# </div>
   </div>
 </div> %>
 
-<div class="container-background bg-warning bg-gradient">
-  <div class="container d-flex justify-content-center">
-    <div id="carouselExampleControls" class="carousel slide my-5" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="<%= asset_url('banner1.png') %>" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>PUB QUIZZES</h1>
-            <p>we do loads</p>
-          </div>
+<h1>Our pubs</h1>
+
+<div class="container-venues-map">
+  <div class="cards">
+    <% @venues.each do |venue| %>
+    <div class="card-venue-category">
+      <% if venue.photo %>
+      <%= cl_image_tag venue.photo.key %>
+      <% end %>
+      <div class="card-venue-info">
+        <h5><%= venue.name %></h5>
+        <p>hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %>
+          <%# <%= cl_image_tag venue.quizmaster.photo.key %>
+        </p>
+        <div class="card-venue-time">
+          <p><%= venue.day_of_the_week.upcase %> at</p>
+          <p><%= venue.time.strftime('%H:%M') %></p>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="<%= asset_url('finger.png') %>" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>DOGS</h1>
-            <p>beautiful beasts</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="<%= asset_url('dog.png') %>" alt="Third slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>CORPORATE EVENTS</h1>
-            <p>they pay well</p>
-          </div>
-        </div>
+        <p>
+          <%# <i class="fa-sharp fa-solid fa-location-dot"></i> %>
+          <%= venue.address.partition(" London ").first%>
+          <%= venue.address.partition(" London ").last%>
+        </p>
+        <p>
+          <%# <i class="fa-solid fa-square-phone"></i> %>
+          <%= venue.phone_number %>
+        </p>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
+    <% end %>
+  </div>
+
+  <div id="map" style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
